# computer-store-system

./: .gitignore  CMakeLists.txt  README.md
SimpleComputerShop/: CMakeLists.txt  alghoritms.cpp  alghoritms.h  case.h  component.h  configurator.cpp  cooler.h  cpu.h  employee.h  gpu.cpp  mainwindow.cpp  motherboard.h  order.cpp  order.h  power_unit.cpp  rom.h  stock.h
SimpleComputerShop/holders/: buffer.txt  cases.txt  cooler.txt  cpu.txt  employes.txt  orders.txt
SimpleComputerShop/src/: cart.cpp  cart.h  case.cpp  component.cpp  configurator.h  cooler.cpp  cpu.cpp  employee.cpp  gpu.h  main.cpp  mainwindow.h  motherboard.cpp  power_unit.h  ram.cpp  ram.h  rom.cpp  stock.cpp
resources/: employes.txt  gpu.txt  motherboard.txt  power_units.txt  ram.txt  rom.txt
src/: main.cpp
src/components/: case.h  component.h  cooler.h  cpu.h  gpu.h  motherboard.h  powerUnit.h  ram.h  rom.h
src/stockData/: stockRepository.cpp  stockRepository.h
src/ui/loginWindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
src/ui/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  stockinfodialog.cpp  stockinfodialog.h  stockinfodialog.ui
src/userData/: user.cpp  user.h
